Fix selection color problem on Linux; comment "-fx-smooth: false;" On Linux -fx-smooth: false; makes selection color white, so selected text is not visible.

--- a/src/main/resources/styles/main-narrow.css
+++ b/src/main/resources/styles/main-narrow.css
@@ -8,7 +8,7 @@
 * {
     -fx-font-family: 'Menlo', 'Lucida Console', 'Courier', monospace;
     -fx-font-size: 12;
-    -fx-smooth: false;
+    /*-fx-smooth: false;*/
 }
 
 .fieldeditortoppane {
